--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,9 @@
+========= Homework Five =======
+
+The heroku deploying with new appname: http://lingbinc196.herokuapp.com/
+
+10.1-10.8: Add show, edit, delete functions to User, Course and Tasklist; create tasklist with attributes title, course and user, with course and user related to the other two tables.
+
 ========= Homework Four =======
 
 The heroku deploying with new appname: http://lingbinc196.herokuapp.com/
